# iseetv

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  supervisord.conf
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  README.md  custom_logger.py  init_db.py  pyproject.toml  startup.sh
backend/app/: config.py  database.py  logging_config.py  main.py  models.py  video_helpers.py
backend/app/services/: m3u_service.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  config.ts  index.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChannelList.tsx  LoadingOverlay.tsx  NumbersIcon.tsx  SettingsModal.tsx  VideoPlayer.tsx
frontend/src/config/: api.ts
frontend/src/models/: Channel.ts  Settings.ts
frontend/src/services/: api.js  channelService.ts  m3uService.ts  recentChannelsService.ts  settingsService.ts
frontend/src/types/: api.ts
public/: index.html
src/: App.js
