[tool.poetry]
name = "iseetv-backend"
version = "0.1.0"
description = "IPTV Backend"
packages = [{include = "app"}]
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
aiohttp = "^3.11.10"
httpx = "^0.28.1"
m3u8 = "^6.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
